# musictheory

./: LICENSE  Makefile  README  musictheory.cabal
src/Music/Theory/: Diatonic.hs  Note.hs  SPN.hs  Scale.hs
src/Music/Theory/Scale/: Rooted.hs  Western.hs
tests/: DocTest.hs  Main.hs
