name:                musictheory
version:             0.1.0.0
synopsis:            Types for dealing with music theory
description:         A library defining some data types for working with music theory.
homepage:            github.com/daoo/musictheory
license:             BSD3
license-file:        LICENSE
author:              Daniel Oom
maintainer:          daoo314@gmail.com
copyright:           (C) 2014 Daniel Oom
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Music.Theory.Diatonic
    Music.Theory.Note
    Music.Theory.Rooted
    Music.Theory.SPN
    Music.Theory.Scale
    Music.Theory.Scale.Western
  build-depends:       base, QuickCheck
  hs-source-dirs:      src
  default-language:    Haskell2010
